# atlas-fabric

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
agents/: graph_runtime.py  model_factory.py  orchestrator.py  runtime_env.py  state.py  tracing.py
agents/generator/: graph.py  prompts.py  tools.py
agents/reviewer/: graph.py  prompts.py  tools.py
api/: app.py
api/middleware/: auth.py
api/routes/: configs.py
cli/: main.py
evals/: __init__.py  checks.py  fixtures.py  judge.py  report.py  runner.py
geo/: loader.py  regions.py  union.py  validator.py
knowledge/: polities.json  validator.py
storage/: mongo.py  schema.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_evals_runner.py  test_graph_runtime.py  test_model_factory.py  test_runtime_env.py  test_storage_mongo.py  test_tracing.py  test_union.py  test_validator.py
