[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-fabric"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-groq",
    "langchain-mistralai",
    "shapely>=2.0",
    "geopandas",
    "motor>=3.6",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "typer>=0.13",
    "pydantic>=2.0",
    "slowapi",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "httpx",
    "bandit",
    "pip-audit",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["agents", "cli", "geo", "knowledge", "storage", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
